chore: start implementing server router and fix api error
